# IndraLogger

./: .clang-format  CMakeLists.txt  README.md  compile_commands.json  tags
clogger/: .gdb_history  Clogger.cpp  Clogger.h  CloggerMain.h  CloggerTypes.h  LoggerMain.h
clogger/dumper/: DumperBase.h  DumperTypes.h  StreamDumper.h
clogger/handler/: HandlerTypes.h  PriorityHandler.h  ZeroCopyReadHandler.h
clogger/logger/: LogBuffer.h  Logger.h  LoggerBase.h  LoggerTypes.h  Severity.h
clogger/logger/buffers/: LoggerBufferBase.h  LoggerFRBuffer.h
clogger/utility/: BufferUnitType.h  EnumCreator.h  FixedRingBuffer.h  LogMacro.h  SStreamDataUnit.h  Severity.h
clogger/utility/dataStructs/: FastBuffer.h  FastStream.h  FixedRingBuffer.h  StreamDataUnit.h  StringBuffer.h  StringifyEnum.h
clogger/utility/macroDefs/: CheckMemFunc.h  EnumCreator.h  LogUtils.h
clogger/utility/sfinaeStructs/: ExtractFuncSign.h
qlogger/: QLogger.cpp  QLogger.h  QLoggerMain.h  QLoggerTypes.h
qlogger/dumper/: DumperTypes.h  StreamDumper.h
qlogger/handler/: HandlerTypes.h  PriorityHandler.h  ZeroCopyReadHandler.h
qlogger/logger/: Logger.h  LoggerTypes.h  Severity.h
qlogger/logger/buffers/: LoggerBufferBase.h  LoggerFRBuffer.h
qlogger/utility/dataStructs/: FastBuffer.h  FastStream.h  FixedRingBuffer.h  StreamDataUnit.h  StringBuffer.h  StringifyEnum.h
qlogger/utility/macroDefs/: CheckMemFunc.h  EnumCreator.h  LogUtils.h
qlogger/utility/sfinaeStructs/: ExtractFuncSign.h
src/: CEnum.h  CLogBuffer.h  CSeverity.h  Clogger.h  CloggerMain.h  main.cpp
src/collector/: collectorBase.h
test/: generateLoggerInput.py  logger_input  thread.test.cpp  thread.test.print.cpp  txt
